--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,9 @@ authors = ["Filip Øskar Przybycień <filip.oskar@zohomail.eu>"]
 edition = "2018"
 
 [dependencies]
+float_eq = "0.6"
+tiff = "0.7"
+svg = "0.10.0"
+nalgebra = "0.27.1"
+noise = "0.7"
+splines = "4.0.0"
