--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ authors = ["Filip Øskar Przybycień <filip.oskar@zohomail.eu>"]
 edition = "2018"
 
 [dependencies]
-float_eq = "0.6"
-geo = "0.18.0"
+geo-types = "0.7.2"
+geo-svg = "0.5.0"
 tiff = "0.7"
 svg = "0.10.0"
 noise = "0.7"
 splines = "4.0.0"
+
+[dev-dependencies]
+float_eq = "0.6"
