--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ authors = ["Filip Øskar Przybycień <filip.oskar@zohomail.eu>"]
 edition = "2018"
 
 [dependencies]
-geo-booleanop = "0.3.2"
-geo-types = "0.6.0"
+geo = "0.18.0"
+geo-booleanop = { git = "https://github.com/21re/rust-geo-booleanop" }
+geo-types = "0.7.2"
 geo-svg = "0.5.0"
 tiff = "0.7"
 svg = "0.10.0"
