--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["Filip Øskar Przybycień <filip.oskar@zohomail.eu>"]
 edition = "2018"
 
 [dependencies]
+log = "0.4.14"
+pretty_env_logger = "0.4.0"
+
 geo = "0.18.0"
 geo-booleanop = { git = "https://github.com/21re/rust-geo-booleanop" }
 geo-types = "0.7.2"
