--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,15 +5,20 @@ authors = ["Filip Øskar Przybycień <filip.oskar@zohomail.eu>"]
 edition = "2018"
 
 [dependencies]
+# base
 log = "0.4.14"
 pretty_env_logger = "0.4.0"
+rayon = "1.5.1"
 
+# rendering
+tiff = "0.7"
+svg = "0.10.0"
+
+# geography
 geo = "0.18.0"
 geo-booleanop = { git = "https://github.com/21re/rust-geo-booleanop" }
 geo-types = "0.7.2"
 geo-svg = "0.5.0"
-tiff = "0.7"
-svg = "0.10.0"
 noise = "0.7"
 splines = "4.0.0"
 
