--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ log = "0.4.14"
 pretty_env_logger = "0.4.0"
 rayon = "1.5.1"
 num-traits = "0.2.14"
+ordered-float = "2.7.0"
 
 # rendering
 tiff = "0.7"
@@ -18,7 +19,6 @@ svg = "0.10.0"
 # geography
 geo = "0.18.0"
 geo-booleanop = { git = "https://github.com/21re/rust-geo-booleanop" }
-geo-types = "0.7.2"
 geo-svg = "0.5.0"
 petgraph = "0.6.0"
 noise = "0.7"
