--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ log = "0.4.14"
 pretty_env_logger = "0.4.0"
 rayon = "1.5.1"
 num-traits = "0.2.14"
-ordered-float = "2.7.0"
+ord_subset = "3.1.1"
 
 # rendering
 tiff = "0.7"
