--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 # base
 log = "0.4.14"
 pretty_env_logger = "0.4.0"
-rayon = "1.5.1"
+rayon = { version = "1.5.1", default-features = false }
 num-traits = "0.2.14"
 ord_subset = "3.1.1"
 
@@ -17,13 +17,12 @@ tiff = "0.7"
 svg = "0.10.0"
 
 # geography
-geo = "0.18.0"
+geo = { version = "0.18.0", default-features = false }
 geo-booleanop = { git = "https://github.com/21re/rust-geo-booleanop" }
 geo-svg = "0.5.0"
 petgraph = "0.6.0"
-noise = "0.7"
+noise = { version = "0.7.0", default-features = false }
 splines = "4.0.0"
-nalgebra = "0.28.0"
 
 [dev-dependencies]
 float_eq = "0.6"
