--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 log = "0.4"
 pretty_env_logger = "0.4"
 rayon = { version = "1.5.3", default-features = false }
+itertools = "0.10"
 num-traits = "0.2"
 ord_subset = "3.1"
 
